<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Denuncia Ciudadana</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_message">Hola! Gusto en Verte Otra Vez</string>
    <string name="label_option">Puedes Iniciar Sesión con Facebook!</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="noAccount">¿No Tienes una Cuenta? Registrate</string>

    <string name="register">Crear Cuenta</string>
    <string name="message_register">Hola! Sólo te Tomará 3 Minutos</string>
    <string name="withAccount">¿Tienes una Cuenta? Inicia Sesión</string>

    <string name="label_email">Correo</string>
    <string name="label_name">Nombre</string>
    <string name="label_cellphone">Celular</string>
    <string name="label_password">Contraseña</string>
    <string name="label_address">Dirección</string>

    <string name="tab_newComplaint">Denunciar</string>
    <string name="tab_myComplaint">Mis Denuncias</string>
    <string name="tab_complaints">Denuncias</string>

    <string name="new_complaint">Crear Denuncia</string>
    <string name="fragment_new_complaint">¿Quieres Realizar una Nueva Denuncia?</string>

    <string name="loading" tools:ignore="TypographyEllipsis">Cargando...</string>
    <string name="no_network">Sin Conección</string>
    <string name="verify">Verifica la Conección a Internet y Vuelve a Intentarlo</string>
    <string name="exit">Salir de la Aplicación</string>

    <string name="facebook_app_id">674579730084873</string>
    <string name="fb_login_protocol_scheme">fb674579730084873</string>

    <string name="creator">Creador de Denuncia Ciudadana</string>
    <string name="name">Sebastián Benavides Cartes</string>
    <string name="back">Volver al Menu Principal</string>
</resources>