<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="#373636"
    android:padding="12dp">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/layout_logo"
        tools:ignore="ContentDescription"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
    >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="28sp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/message"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
        />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            tools:ignore="UselessParent"
        >

            <ImageView
                android:id="@+id/login_icon_user"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="ContentDescription"
                android:src="@drawable/ic_user"
            />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/login_icon_user"
                android:layout_toEndOf="@id/login_icon_user"
                android:layout_centerInParent="true"
                tools:ignore="RelativeOverlap"
            >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_email"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    tools:ignore="Autofill"
                />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent"
        >

            <ImageView
                android:id="@+id/login_icon_pass"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                tools:ignore="ContentDescription"
                android:src="@drawable/ic_password"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/login_icon_pass"
                android:layout_toEndOf="@id/login_icon_pass"
                android:layout_centerInParent="true"
                app:endIconMode="password_toggle"
                tools:ignore="RelativeOverlap"
            >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    tools:ignore="Autofill"
                />

            </com.google.android.material.textfield.TextInputLayout>



        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ly_button"
            android:backgroundTint="#F26824"
            android:layout_marginTop="22dp"
            tools:ignore="UnusedAttribute"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="12dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/options"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
        />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
        >

            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:drawableLeft="@drawable/ic_twitter"
                android:drawableStart="@drawable/ic_twitter"
                android:background="@drawable/ly_button"
                android:backgroundTint="#1DA1F2"
                android:paddingHorizontal="6dp"
                android:text="@string/twitter"
                tools:ignore="RelativeOverlap"
                tools:targetApi="lollipop"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="18sp"
            />

            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawableStart="@drawable/ic_facebook"
                android:background="@drawable/ly_button"
                android:backgroundTint="#3B5998"
                android:paddingHorizontal="6dp"
                android:text="@string/facebook"
                tools:ignore="RelativeOverlap"
                tools:targetApi="lollipop"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="18sp"
            />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:text="@string/noAccount"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
        />

    </LinearLayout>

</RelativeLayout>